# code-samples

./: README.md
CUDA_HOG_SVM/: gpu.cu  gx.ppm  gy.ppm  pedestrian128_1.ppm  ppmIO.h  svm.h
dataset_creator/: CarlaSyncMode.py  README.md  coco_creator.py  dataset_creator_cars_people.py  generate_traffic.py  rexuirements.txt  test_coco.py
dc_motor_lqr/: identify.ipynb  measurement.csv  motor_params.py
dc_motor_lqr/firmware/: CMakeLists.txt  README.md  hardware.c  hardware.h  kalman_filter.c  kalman_filter.h  matrix.c  matrix.h  pico_micro_ros_example.c
dc_motor_lqr/motor_controller/: package.xml  setup.cfg  setup.py
dc_motor_lqr/motor_controller/motor_controller/: logger.py
traffic_light_detector/: ClassicDetector.py  SVMDetector.py  collect.py  drive.py  faster_rcnn.ipynb  svm_train.ipynb
